--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,17 @@ excludes=
 file.reference.Aeropuerto_prototipo-folder=folder
 file.reference.flatlaf-3.0.jar=lib/flatlaf-3.0.jar
 file.reference.flatlaf-intellij-themes-3.0.jar=lib/flatlaf-intellij-themes-3.0.jar
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Aeropuerto_prototipo-folder}:\
     ${file.reference.flatlaf-3.0.jar}:\
     ${file.reference.flatlaf-intellij-themes-3.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
